Use link for Mongo Upsert instead of Post Title

--- a/Reddit_Scraping_Script.ipynb
+++ b/Reddit_Scraping_Script.ipynb
@@ -2,51 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading Libraries\n",
-      "Complete\n",
-      "Loading Reddit Params\n",
-      "Complete\n",
-      "Assigning Variables\n",
-      "Complete\n",
-      "Pulling 2 posts from ['liberal', 'democrat', 'democrats', 'leftist'] and ['conservative', 'republican', 'republicans', 'rightist']\n",
-      "Valid URL\n",
-      "Article Title Added\n",
-      "Valid URL\n",
-      "Valid URL\n",
-      "Article Title Added\n",
-      "Valid URL\n",
-      "Article Title Added\n",
-      "Valid URL\n",
-      "Valid URL\n",
-      "Valid URL\n",
-      "Article Title Added\n",
-      "5 none-articles added\n",
-      "Valid URL\n",
-      "Article Title Added\n",
-      "Added 5 articles\n",
-      "Valid URL\n",
-      "creating data frame from 13 links\n",
-      "Done processing 5 articles and 8 non-articles as dataframe\n",
-      "Complete\n",
-      "Connecting to MongoDB\n",
-      "Connection Established\n",
-      "Converting DataFrame to BSON\n",
-      "Complete\n",
-      "Updating Records in Database\n",
-      "Added 13 Entries to Database\n",
-      "All Processes Completed Succesfully\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Loading Libraries')\n",
     "\n",
@@ -166,8 +126,6 @@
     "            article = Article(post.url)                           ## Instantiate newspaper3k library ##\n",
     "            if article.is_valid_url():                            ## Is post a URL?  ##\n",
     "                \n",
-    "                print(\"Valid URL\")\n",
-    "                \n",
     "                article.download()\n",
     "                article.parse()\n",
     "                \n",
@@ -178,7 +136,6 @@
     "                    \n",
     "                    if article.title != []:                                  ## Title parsed? ##\n",
     "                        posts_dict[\"article title\"].append(article.title)\n",
-    "                        print(\"Article Title Added\")\n",
     "                    else:\n",
     "                        posts_dict[\"article title\"].append(np.nan)\n",
     "                    \n",
@@ -276,7 +233,7 @@
     "old_count = collection.count()\n",
     "\n",
     "for post in data:\n",
-    "    collection.update_one({'post title': post['post title']},{'$set': post}, upsert=True)\n",
+    "    collection.update_one({'link': post['link']},{'$set': post}, upsert=True)\n",
     "    \n",
     "new_count = collection.count()\n",
     "\n",
