Added Failed Download Exception and Garbage Collection

--- a/Reddit_Scraping_Script.ipynb
+++ b/Reddit_Scraping_Script.ipynb
@@ -91,6 +91,7 @@
     "    \n",
     "    article_count = 0\n",
     "    invalid_links = 0\n",
+    "    failed_links = 0\n",
     "    \n",
     "    for sub in red_sub_list + blu_sub_list:\n",
     "        submissions = (x for x in api.subreddit(sub).hot(limit=sub_limit) if not x.stickied)\n",
@@ -126,10 +127,9 @@
     "            article = Article(post.url)                           ## Instantiate newspaper3k library ##\n",
     "            if article.is_valid_url():                            ## Is post a URL?  ##\n",
     "                \n",
-    "                article.download()\n",
-    "                article.parse()\n",
-    "                \n",
-    "                if article.is_valid_body():                       ## Is post an article?  ##\n",
+    "                try:                                                         ## Try to download and parse article ##\n",
+    "                    article.download()\n",
+    "                    article.parse()\n",
     "                    \n",
     "                    article_count += 1\n",
     "                    posts_dict[\"is article\"].append(True)\n",
@@ -151,17 +151,18 @@
     "                    \n",
     "                    if article_count % 5 == 0:\n",
     "                        print(f\"Added {article_count} articles\")\n",
-    "                \n",
-    "                else:\n",
-    "                                                    \n",
-    "                    invalid_links += 1\n",
+    "\n",
+    "                except:                               \n",
+    "                    failed_links += 1\n",
     "                    posts_dict[\"is article\"].append(False)\n",
     "                    posts_dict[\"article title\"].append(np.nan)\n",
     "                    posts_dict[\"author\"].append(np.nan)\n",
     "                    posts_dict[\"text\"].append(np.nan)\n",
     "                    \n",
     "                    if invalid_links % 5 == 0:\n",
-    "                        print(f\"{invalid_links} none-articles added\")\n",
+    "                        print(f\"{failed_links} links failed parse\")\n",
+    "                    \n",
+    "                    pass\n",
     "            \n",
     "                        \n",
     "            else:\n",
@@ -177,7 +178,7 @@
     "                    \n",
     "    if df:\n",
     "        \n",
-    "        print(f\"creating data frame from {article_count + invalid_links} links\")\n",
+    "        print(f\"creating data frame from {article_count + invalid_links } links. {failed_links} failed to download\")\n",
     "        \n",
     "        posts_df = pd.DataFrame(posts_dict)                             ## Make it a dataframe ##\n",
     "        posts_df =posts_df[[\"subreddit\",\n",
@@ -240,7 +241,12 @@
     "added_count = new_count - old_count\n",
     "\n",
     "print(f'Added {added_count} Entries to Database')\n",
-    "print('All Processes Completed Succesfully')"
+    "print('All Processes Completed Succesfully')\n",
+    "\n",
+    "## Garbage Collection ##\n",
+    "\n",
+    "data = []\n",
+    "df = []"
    ]
   }
  ],
